8/t4/9/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress
  namespace: wordpress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/success-codes: '200-399'
    alb.ingress.kubernetes.io/subnets: subnet-015d8e72a460767e0, subnet-06002b02ba0a9c7fe
    alb.ingress.kubernetes.io/security-groups: sg-061b64915c47fe239
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /pma
            pathType: Prefix
            backend:
              service:
                name: nginx-proxy
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wordpress
                port:
                  number: 80
